# ellis_op

./: Doxyfile  LICENSE  README.md  meson.build
include/ellis_op/: call_trace.hpp  time.hpp
include/ellis_op_private/: using.hpp
src/: time.cpp
test/: op_test.cpp
